# triangulation_IRMP

./: CMakeLists.txt  README.md
src/: camera.cpp  camera.h  clock.cpp  clock.h  main.cpp  simulation.cpp  simulation.h  triangulation.cpp  triangulation.h
